# advent-of-code

./: .gitignore  Cargo.toml  README.md
2020/: Cargo.toml  README.md
2020/src/: lib.rs
2020/src/day01/: README.md  mod.rs
2020/src/day02/: README.md  mod.rs
2020/src/day03/: README.md  mod.rs
2020/src/day04/: README.md  mod.rs
2020/src/day05/: README.md
2020/src/day06/: README.md  mod.rs
2020/src/day07/: README.md  mod.rs
2020/src/day08/: README.md  mod.rs
2020/src/day09/: README.md  mod.rs
2020/src/day10/: mod.rs
2020/src/day11/: README.md  mod.rs
2021/: .aocrunner.json  README.md  package.json
2022/: .gitignore  README.md
2022/src/: Utils.kt
2023/: README.md  go.mod
2023/day01/: README.md  main.go  main_test.go
2023/day02/: main.go  main_test.go
2023/day03/: main.go  main_test.go
2023/day04/: main.go  main_test.go
2023/day05/: main.go  main_test.go
2023/day06/: main.go  main_test.go
2023/day07/: main.go  main_test.go
2023/day08/: main.go  main_test.go
2023/day09/: main.go  main_test.go
2023/day10/: main.go  main_test.go
2023/day11/: main.go  main_test.go
2023/day12/: main.go  main_test.go
2023/day13/: main.go  main_test.go
2023/day14/: main.go  main_test.go
2023/day15/: main.go  main_test.go
2023/day16/: main.go  main_test.go
2023/day17/: main.go  main_test.go
2023/day18/: main.go  main_test.go
2023/day19/: main.go  main_test.go
day-01/: Cargo.toml
day-02/: Cargo.toml  README.md
day-03/: Cargo.toml  README.md
day-04/: Cargo.toml
day-05/: Cargo.toml  README.md
day-06/: Cargo.toml
(+104 files in other folders)
