[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Alex Tennant <alex@adtennant.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

anyhow = "1.0.35"
indoc = "1.0.7"
itertools = "0.10.5"
parse-display = "0.4.0"
